[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7", features = ["macros"]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.1", features = ["fs", "cors"] }
scraper = "0.21"
reqwest = { version = "0.12.9", features = ["cookies"] }
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
thiserror = "2.0.3"
redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16.0"
governor = "0.7"
url = "2.5.3"
tokio-stream = "0.1"
itertools = "0.13"
tracing = "0.1"
strsim = "0.11.1"
dotenv = "0.15"
bb8 = "0.8.6"
bb8-redis = "0.17.0"
unidecode = "0.3.0"